Fix create segment button alignment on stats page
[MAILPOET-2883]

--- a/assets/css/src/components-plugin/_dynamic-segments.scss
+++ b/assets/css/src/components-plugin/_dynamic-segments.scss
@@ -1,7 +1,3 @@
 .form-field-row-filters div {
   margin-bottom: 10px;
 }
-
-.button.stats-create-segment {
-  margin-top: 3px;
-}
